--- a/English/作文积累.md
+++ b/English/作文积累.md
@@ -58,3 +58,40 @@ winter sports meeting
 ![image-20231117200349255](assets/image-20231117200349255.png)
 
 ![image-20231117200401968](assets/image-20231117200401968.png)
+
+# dedication
+
+奉献
+
+# cooperation 
+
+  n.合作;  配合;  协作;  协助;  
+
+# progress 
+
+n.
+进展;进步;进程;前进;行进
+vi.
+进展;进步;前进;改进;行进;(时间上)推移，流逝
+
+# caption
+
+n.
+(图片、漫画等的)说明文字
+vt.
+给(图片、照片等)加说明文字
+
+# illustrate
+
+vt.
+说明;(用示例、图画等)解释;显示…存在;加插图于;表明…真实;给(书等)做图表
+
+# depict
+
+vt.
+描绘;描述;描写;刻画;描画
+
+# scene
+
+n.
+场景;(尤指不愉快事件发生的)地点，现场;场面;景象;情景;镜头;事件;（戏剧或歌剧的）场;片段;争吵，吵闹;活动领域;表现…景色的绘画（或摄影）作品
