--- a/politics/时政.md
+++ b/politics/时政.md
@@ -28,3 +28,9 @@
 # 构建人类命运共同体
 
 国务院新闻办公室2023年9月26日发布的《携手构建人类命运共同体：中国的倡议与行动》白皮书指出，构建人类命运共同体为改革和完善国际治理体系提出了中国方案。构建人类命运共同体，并不是推倒重来，也不是另起炉灶，而是推进国际关系民主化，推动全球治理朝着更加公正合理的方向发展。这一重要理念，汇聚了各国人民求和平、谋发展、盼稳定的最大公约数，画出了不同文化背景和发展程度国家之间的最大同心圆，超越了零和博弈、强权政治、冷战对抗的各种陈旧思维，成为新时代中国特色大国外交的总目标，成为引领时代潮流和人类前进方向的鲜明旗帜。
+
+国务院新闻办公室2023年9月发布的《携手构建人类命运共同体：中国的倡议与行动》白皮书指出，构建人类命运共同体既是一个美好愿景，也是一个历史过程，需要一代又一代人接力跑才能实现。实现这个美好愿景，**信心和决心是首要；格局与胸怀是基础；担当与行动是关键。**
+
+# 现代化
+
+我们追求的不是中国独善其身的现代化，而是期待同广大发展中国家在内的各国一道，共同实现现代化。世界现代化应该是和平发展的现代化、互利合作的现代化、共同繁荣的现代化。
