--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -134,9 +134,9 @@
 
 1917年。:star:1月蔡元培任北大校长，聘陈独秀为文科学长，《新青年》迁至北京。:star:3月，俄国爆发二月革命，推翻了罗曼诺夫王朝，结束了君主专制的统治，二月革命后出现了两个政权并立的局面，俄国临时政府（俄罗斯共和国）和苏维埃政权。:star:4月6日，美国向德国宣战，次日向奥匈宣战。:star:6月张勋复辟（仅12天）。:star:8月14日大总统冯国璋在8月14日发布《大总统布告》，声明自当日上午10时起，对德国、奥匈帝国宣战。:star:9月在广州成立以孙中山为大元帅的护法军政府。:star:11月7日，**俄国十月革命**，结束了俄国临时政府与工兵代表苏维埃并立、一个国家两个政府的奇怪局面，苏维埃政权确立，建立世界上第一个社会主义国家政权——俄罗斯苏维埃联邦社会主义共和国（**苏俄**），此后逐步实行**战时共产主义**（国内贸易国有化；对一切食品、个人消费品、家用品、糖、茶、盐、火柴等等实行国家垄断；余粮收集制；产品配给制；劳动义务制；全部工业国有化；工人超10人的私营企业全部收归国有）。因叛乱和外部干涉，苏俄内战在全国范围爆发了，这个新生的国家几乎从诞生伊始就面临着夭亡的威胁。:star:本年，新文化运动举起“文学革命”的大旗，提倡白话文，反对文言文，提倡新文学，反对旧文学。
 
-1918年。:star:3月3日，苏俄 与同盟国签订了和约，苏俄退出一战。:star:3月6日，英、法、日、美等协约国为扼杀新生的苏维埃政权，乘机进行武装干涉，扶植俄国反革命势力发动武装叛乱，并有干涉军入境，一战后结束后德国及奥斯曼等也有干涉。:star:5月，鲁迅在《新青年》上发表了中国现代文学史上第一篇白话小说《狂人日记》，对旧礼教旧道德进行了无情的鞭挞。:star:5月21日，孙中山看透了西南实力派名为护法、实为争夺地盘的面目，愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月11日，一战结束。:star:11月李大钊《庶民的胜利》《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
+1918年。:star:3月3日，苏俄 与同盟国签订了和约，苏俄退出一战。:star:3月6日，英、法、日、美等协约国为扼杀新生的苏维埃政权，乘机进行武装干涉，扶植俄国反革命势力发动武装叛乱，并有干涉军入境，一战后结束后德国及奥斯曼等也有干涉。:star:5月，鲁迅在《新青年》上发表了中国现代文学史上第一篇白话小说《狂人日记》，对旧礼教旧道德进行了无情的鞭挞。:star:5月21日，孙中山看透了西南实力派名为护法、实为争夺地盘的面目，愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月，上旬，德皇威廉二世退位，魏玛共和国成立；11日，**一战结束**。:star:11月李大钊《庶民的胜利》《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
 
-1919年。:star:1月巴黎和会召开。:star:3月2～6日，在莫斯科召开国际共产主义者代表会议，即第三国际第一次代表大会，共产国际（**第三国际**）成立。:star:5月4日，**五四运动**（旧民主主义革命走向新民主主义革命的转折点，新民主主义革命的开端，彻底反帝反封建的伟大爱国运动，伟大社会革命运动，伟大思想启蒙运动和新文化运动，巴黎和会上中国外交的失败，“外争主权，内惩国贼”、“取消二十一条”、“还我青岛”，最初运动中心主力是学生，运动的中心在北京；五四精神，爱国进步民主科学，核心是爱国主义；第一次全面觉醒）。:star:6月5日，上海工人罢工，推动了商人罢市、学生罢课，随后扩展到了20多个省区，五四运动斗争的主力由学生转为工人，运动中心由北京转为上海，中国工人阶级开始以独立的姿态登上历史舞台。:star:6月，五四运动取得了重大胜利，北洋政府不得不释放被捕学生，罢免亲日派官僚，中国政府代表没有出席巴黎和约的签字仪式（6月28日）。:star:9月李大钊**《我的马克思主义观》**（系统介绍了马克思主义理论，标志着马克思主义在中国进入比较系统的传播阶段）:star:旧民主主义革命时期至此结束，新民主主义革命时期的开端。
+1919年。:star:1月巴黎和会召开。:star:3月2～6日，在莫斯科召开国际共产主义者代表会议，即第三国际第一次代表大会，共产国际（**第三国际**）成立。:star:5月4日，**五四运动**（旧民主主义革命走向新民主主义革命的转折点，新民主主义革命的开端，彻底反帝反封建的伟大爱国运动，伟大社会革命运动，伟大思想启蒙运动和新文化运动，巴黎和会上中国外交的失败，“外争主权，内惩国贼”、“取消二十一条”、“还我青岛”，最初运动中心主力是学生，运动的中心在北京；五四精神，爱国进步民主科学，核心是爱国主义；第一次全面觉醒）。:star:6月5日，上海工人罢工，推动了商人罢市、学生罢课，随后扩展到了20多个省区，五四运动斗争的主力由学生转为工人，运动中心由北京转为上海，中国工人阶级开始以独立的姿态登上历史舞台。:star:6月，五四运动取得了重大胜利，北洋政府不得不释放被捕学生，罢免亲日派官僚，中国政府代表没有出席巴黎和约《凡尔赛条约》的签字仪式（6月28日）。:star:9月李大钊**《我的马克思主义观》**（系统介绍了马克思主义理论，标志着马克思主义在中国进入比较系统的传播阶段）:star:旧民主主义革命时期至此结束，新民主主义革命时期的开端。
 
 # **1919年到1949年：:star:新民主主义革命时期**
 
@@ -163,7 +163,7 @@
 1926年到1927年3月，:star:仅10个月时间，国民革命军便从广州打到武汉、南京和上海，打垮了吴佩孚、孙传芳两大军阀，革命势力从珠江流域一直推进到长江流域。:star:到1927年6月，武汉政府的北伐军与北方国民军会师中原，革命势力便发展到黄河流域，席卷大半个中国。
 
 1927年。3月，蒋介石制造中山舰事件。:star:3月，毛泽东**《湖南农民运动考察报告》**，总结辛亥革命失败原因：“国民革命需要一个大
-的农村变动，辛亥革命没有这个变动，所以失败了”；指出没有贫农阶级，决不能造成现时乡村的革命状态，决不能打倒土豪劣绅，完成民主革命。:star:4月12日，蒋介石上海**四一二反革命政变**，并在南京建立国民政府，国民政府宁汉分裂。:star:4月，李大钊惨遭反动军阀绞杀。:star:4月中国共产党第五次全国代表大会（**党五大**，武汉，会议实际上并没有解决挽救时局的问题，修改党章，正式提出党内实行民主集中制的组织原则）。:star:7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作全面破裂，大革命失败。:star:7月，中共中央政治局常委会决定三件大事：南昌、秋收、讨论和决定大革命失败后的新方针。:star:8月7日中共秘密召开**八七会议**（汉口，确定了**土地革命**和**武装起义**方针、清算右倾机会主义错误，给正处于思想混乱和组织涣散的中国共产党指明了新的出路，这是由大革命失败到**土地革命战争**兴起的历史性转变）。:star:8月1日，**南昌起义**，打响了武装反抗国民党反动派的第一枪，这是中国共产党独立领导革命战争，创建人民军队和武装夺取政权的开端。:star:9月，宁汉合流。:star:9月9日，**秋收起义**（打出来“工农革命军”旗帜，攻打长沙受挫后南下向农村区域转移）。秋收起义期间，9月底，**三湾改编**，从政治上、组织上保证了党对军队的绝对领导，标志着毛泽东建设人民军队思想的开始形成；开始了创建井冈山农村革命根据地的斗争，从进攻大城市转向了向农村进军，这是中国人民革命史上具有绝对意义的新起点，点燃了**工农武装割据**的星星之火，为中国革命开辟出了**农村包围城市、武装夺取政权**的新道路。:star:12月11日，广州起义（对国民党的屠杀政策发动了又一次英勇的反击）。
+的农村变动，辛亥革命没有这个变动，所以失败了”；指出没有贫农阶级，决不能造成现时乡村的革命状态，决不能打倒土豪劣绅，完成民主革命。:star:4月12日，蒋介石上海**四一二反革命政变**，并在南京建立国民政府，国民政府宁汉分裂。:star:4月，李大钊惨遭反动军阀绞杀。:star:4月中国共产党第五次全国代表大会（**党五大**，武汉，会议实际上并没有解决挽救时局的问题，修改党章，正式提出党内实行民主集中制的组织原则）。:star:7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作全面破裂，大革命失败。:star:7月，中共中央政治局常委会决定三件大事：准备南昌起义、组织秋收起义、讨论和决定大革命失败后的新方针。:star:8月7日中共秘密召开**八七会议**（汉口，确定了**土地革命**和**武装起义**方针、清算右倾机会主义错误，给正处于思想混乱和组织涣散的中国共产党指明了新的出路，这是由大革命失败到**土地革命战争**兴起的历史性转变）。:star:8月1日，**南昌起义**，打响了武装反抗国民党反动派的第一枪，这是中国共产党独立领导革命战争，创建人民军队和武装夺取政权的开端，党对军队的领导开端于此。:star:9月，宁汉合流。:star:9月9日，**秋收起义**（打出来“工农革命军”旗帜，攻打长沙受挫后南下向农村区域转移）。秋收起义期间，9月底，**三湾改编**，从政治上、组织上保证了党对军队的绝对领导，党对军队的奠基定型于此，标志着毛泽东建设人民军队思想的开始形成；开始了创建井冈山农村革命根据地的斗争，从进攻大城市转向了向农村进军，这是中国人民革命史上具有绝对意义的新起点，点燃了**工农武装割据**的星星之火，为中国革命开辟出了**农村包围城市、武装夺取政权**的新道路。:star:12月11日，广州起义（对国民党的屠杀政策发动了又一次英勇的反击）。
 
 ## **1927~1937：:star:土地革命战争时期**
 
@@ -173,7 +173,7 @@
 
 1928-1929年：:star:中国民族工商业短暂繁荣。
 
-1929年。:star:2月蒋桂战争、蒋冯战争。:star:4月，毛泽东主持制定中共第二个土地法**《兴国土地法》**（将“没收一切土地”变为“没收一切公用土地及地主阶级的土地”，这是一个原则性的修正，保护了中农的利益使之不受侵犯；但是它仍然规定农民对分到的土地只有使用权，没有所有权）。:star:10月，由美国开始的经济危机席卷整个资本主义世界。:star:12月，红四军党的第九次代表大会（**古田会议**，确立了思想建党、政治建军的原则）。:star:12月，毛泽东**《关于纠正党内的错误思想》**，针对党和红军中存在的种种非无产阶级思想及其危害，提出了思想建党、政治建军的原则，强调党员不但要在组织上入党，而且要在思想上入党，要经常注意用无产阶级思想改造和克服各种非无产阶
+1929年。:star:2月蒋桂战争、蒋冯战争。:star:4月，毛泽东主持制定中共第二个土地法**《兴国土地法》**（将“没收一切土地”变为“没收一切公用土地及地主阶级的土地”，这是一个原则性的修正，保护了中农的利益使之不受侵犯；但是它仍然规定农民对分到的土地只有使用权，没有所有权）。:star:10月，由美国开始的经济危机席卷整个资本主义世界。:star:12月，红四军党的第九次代表大会（**古田会议**，确立了思想建党、政治建军的原则，党对军队的领导定型于此）。:star:12月，毛泽东**《关于纠正党内的错误思想》**，针对党和红军中存在的种种非无产阶级思想及其危害，提出了思想建党、政治建军的原则，强调党员不但要在组织上入党，而且要在思想上入党，要经常注意用无产阶级思想改造和克服各种非无产阶
 级思想。定型了党对军队绝对领导的根本原则和制度。
 
 1930年。:star:1月毛泽东**《星星之火，可以燎原》**，进一步发展了”工农武装割据“的思想，基本形成了农村包围城市、武装夺取政权的理论，红军、游击队和红色区域的建立和发展是半殖民地中国在无产阶级领导之下的农民斗争的最高形式和半殖民地农民斗争发展的必然结果，并且无疑义的是促进全国革命高潮的最重要因素。:star:5月毛泽东**《反对本本主义》**,毛泽东思想的初步形成。理论与实际相结合。独立自主思想的最初的明确表述，坚持独立自主原则是毛泽东针对党存在的”左“倾教条主义("本本主义")倾向错误提出的。第一次提出”没有调查，就没有发言权“。第一次提出”中国革命斗争的胜利要靠中国同志了解中国情况“。基本形成了包含**毛泽东思想的活的灵魂**的实事求是、群众路线、独立自主基本思想，基本形成了明确的马克思主义的思想路线。:star:5月至10月，中原大战。:star:10月，蒋介石开始**”围剿“中共**。
@@ -186,14 +186,14 @@
 
 1932年。:star:中共中央号召各界民众组织义勇军，支援国民党第十九路军的抗日作战。:star:1月5日广州国民政府宣布取消（但粤方势力新设西南两机关，继续维持割据状态，直到1936年两广事变和平解决为止。:star:1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始（粤系政府无法指挥，蒋介石复出任军事委员会委员长，汪精卫任行政院长）。:star:1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。:star:2月东北全境沦陷，“伪满洲国”。:star:4月15日，**中华苏维埃共和国临时中央政府宣布对日作战**。:star:年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。:star:本年，苏联第一个五年计划完成，苏联从农业国变成工业国。
 
-1933年。:star:3月至5月长城抗战。:star:5月5日签订了《淞沪停战协定》（中国军队不能在上海布防，从而使上海门户大开）。:star:5月31日，中日《塘沽协定》（中国军队撤出长城以南大片地区）。:star:9月25日第五次反“围剿”。:star:10月26日，中华苏维埃共和国临时中央政府及工农红军与国民党福建省政府及第十九路军全权代表徐名鸿达成**《反日反蒋初步协定》**，双方达成立即停止军事行动、恢复商品贸易、释放福建境内政治犯、进行反日反蒋的军事准备等协议。:star:11月20日，**福建事变**，李济深、陈铭枢、蒋光鼐、蔡廷锴等人以国民党第十九路军为主力，在福建福州南校场召开大会，决定成立中华共和国人民革命政府，并发布了内外政策，提出：对外取消外国的治外法权，废除不平等条约，对内实行联共反蒋方针。
+1933年。:star:1月，希特勒被任命为德国总理。:star:3月至5月长城抗战。:star:5月5日签订了《淞沪停战协定》（中国军队不能在上海布防，从而使上海门户大开）。:star:5月31日，中日《塘沽协定》（中国军队撤出长城以南大片地区）。:star:8月，德国总体兴登堡逝世，德国总理希特勒接任，宣布自己为第三帝国总理并代行总统职权，立法成为德国元首，并派出间谍，监察国内评论家及异见者；9月1日，德国召开的纳粹党代表大会上首度使用“第三帝国”，魏玛共和国名存实亡，事实上成为**德意志第三帝国**。:star:9月25日第五次反“围剿”。:star:10月26日，中华苏维埃共和国临时中央政府及工农红军与国民党福建省政府及第十九路军全权代表徐名鸿达成**《反日反蒋初步协定》**，双方达成立即停止军事行动、恢复商品贸易、释放福建境内政治犯、进行反日反蒋的军事准备等协议。:star:11月20日，**福建事变**，李济深、陈铭枢、蒋光鼐、蔡廷锴等人以国民党第十九路军为主力，在福建福州南校场召开大会，决定成立中华共和国人民革命政府，并发布了内外政策，提出：对外取消外国的治外法权，废除不平等条约，对内实行联共反蒋方针。
 
 1934年。:star:1月15日，蒋介石军队攻陷福州，人民革命政府和十九路军总部分别迁往漳州和泉州，1月21日，泉州、漳州失守，福建事变失败。:star:4月，由中国共产党提出，宋庆龄、何凝香、李杜等1779人领衔，以“中国民族武装自卫委员会筹备委员会”名义，发表**《中国人民对日作战的基本纲领》**，在纲领上签字的群众达几十万人。:star:10月，第五次反“围剿”失败（王明等人的“左”倾教条主义错误），被迫实行战略性转移，**长征**。
 
-1935年。:star:华北事变（日本策动、拼凑了一些地方性傀儡政权）。:star:意大利入侵埃塞俄比亚。:star:1月**遵义会议**（确立以毛泽东正确路线的领导地位，坚持真理、修正错误，集中解决了在当时具有决定意义的军事问题和组织问题，事实上确立了毛泽东在党中央和红军的领导地位，开始确立以毛泽东同志为核心的党的第一代中央领导集体，在最危急关头挽救了党、挽救了红军、挽救了中国革命。遵义会议开启了中国共产党独立自主解决中国革命实际问题的新阶段，没有解决政治路线和思想路线问题）。:star:5月，中共西北特委组建中华苏维埃共和国西北联邦，中华苏维埃共和国政治体制演变为联邦制。:star:6月27日《察哈尔协定》丧失了察哈尔省主权，为日本吞并华北大开方便之门。:star:8月1日，《为抗日救国告全体同胞书》（**八一宣言**，主张停止内战，组织国防政府和抗日联军，对日作战）。:star:11月，中华苏维埃共和国变更对外名义称“中华苏维埃共和国中央政府西北办事处”。:star:12月，中华苏维埃政权改国名为“中华苏维埃人民共和国”，宣布迁都延安。:star:12月9日，**一二·九运动**(北平抗日游行、反对华北自治，标志着中国人民抗日救亡运动新高潮的到来）。:star:12月党的**瓦窑堡会议**，开始解决政治路线问题，提出党的基本策略任务是建立广泛的抗日民族统一战线（与民族资产阶级），批评了党内长期存在的“左”倾冒险主义、关门主义的错误倾向。会后，毛泽东作报告，系统阐述了这一新政策，阐述了民族资产阶级的两面性和大地主、大资产阶级可能的分化，强调了建立抗日民族统一战线的必要性和可能性，彻底解决了联合民族资产阶级的问题，开始解决党内的政治路线问题。:star:12月毛泽东**《论反对日本帝国主义的策略》**，阐明了**党的抗日民族统一战线新政策**，系统说明了党的政治策略上的诸问题。阐明了与民族资产阶级建立统一战线的可能性，分析了买办资产阶级发生分裂和分化的可能性；指出“半殖民地的政治和经济的主要特点之一就是民族资产阶级的软弱性”，这是“他们从娘肚子带出来的老毛病”，指出民族资产阶级的“两面性下即革命性和动摇性，而动摇性、妥协性由软弱性
+1935年。:star:华北事变（日本策动、拼凑了一些地方性傀儡政权）。:star:意大利入侵埃塞俄比亚。:star:1月，**遵义会议**（确立以毛泽东正确路线的领导地位，坚持真理、修正错误，集中解决了在当时具有决定意义的军事问题和组织问题，事实上确立了毛泽东在党中央和红军的领导地位，开始确立以毛泽东同志为核心的党的第一代中央领导集体，在最危急关头挽救了党、挽救了红军、挽救了中国革命。遵义会议开启了中国共产党独立自主解决中国革命实际问题的新阶段，没有解决政治路线和思想路线问题）。:star:5月，中共西北特委组建中华苏维埃共和国西北联邦，中华苏维埃共和国政治体制演变为联邦制。:star:6月27日，《察哈尔协定》丧失了察哈尔省主权，为日本吞并华北大开方便之门。:star:8月1日，**《为抗日救国告全体同胞书》**（**八一宣言**，主张停止内战，组织国防政府和抗日联军，对日作战）。:star:11月，中华苏维埃共和国变更对外名义称“中华苏维埃共和国中央政府西北办事处”。:star:12月，中华苏维埃政权改国名为“中华苏维埃人民共和国”，宣布迁都延安。:star:12月9日，**一二·九运动**(北平抗日游行、反对华北自治，标志着中国人民抗日救亡运动新高潮的到来）。:star:12月，党的**瓦窑堡会议**，开始解决政治路线问题，提出党的基本策略任务是建立广泛的抗日民族统一战线（与民族资产阶级），批评了党内长期存在的“左”倾冒险主义、关门主义的错误倾向。会后，毛泽东作报告，系统阐述了这一新政策，阐述了民族资产阶级的两面性和大地主、大资产阶级可能的分化，强调了建立抗日民族统一战线的必要性和可能性，彻底解决了联合民族资产阶级的问题，开始解决党内的政治路线问题。:star:12月，毛泽东**《论反对日本帝国主义的策略》**，阐明了**党的抗日民族统一战线新政策**，系统说明了党的政治策略上的诸问题。阐明了与民族资产阶级建立统一战线的可能性，分析了买办资产阶级发生分裂和分化的可能性；指出“半殖民地的政治和经济的主要特点之一就是民族资产阶级的软弱性”，这是“他们从娘肚子带出来的老毛病”，指出民族资产阶级的“两面性下即革命性和动摇性，而动摇性、妥协性由软弱性
 决定。
 
-1936年。:star:5月毛朱**《停战议和一致抗日通电》**（放弃了“反蒋”口号，第一次公开把蒋介石作为联合对象）。:star:6月至9月两广事变（两广军阀势力以抗日名义举兵反蒋，双方达成政治妥协而和平结束）。:star:9月1日，中共中央明确提出党的总方针是“逼蒋抗日”。:star:10月红军会师，**长征结束**（中国革命转危为安）。:star:12月毛泽东**《中国革命战争的战略问题》**（总结土地革命战争中党内在军事问题上的争论，系统说明了有关中国战争战略方面的诸问题）。:star:12月，苏联宪法宣布苏联已经建成了社会主义。:star:12月12日**西安事变**（西安事变的和平解决成为时局转换的枢纽，十年内战基本结束，国内和平初步实现）。
+1936年。:star:5月，毛朱**《停战议和一致抗日通电》**，放弃了“反蒋”口号，第一次公开把蒋介石作为联合对象。:star:6月至9月两广事变（两广军阀势力以抗日名义举兵反蒋，双方达成政治妥协而和平结束）。:star:9月1日，中共中央明确提出党的总方针是“逼蒋抗日”。:star:10月，红军会师，**长征结束**（中国革命转危为安）。:star:12月，毛泽东**《中国革命战争的战略问题》**（总结土地革命战争中党内在军事问题上的争论，系统说明了有关中国战争战略方面的诸问题）。:star:12月，苏联宪法宣布苏联已经建成了社会主义。:star:12月12日**西安事变**（西安事变的和平解决成为时局转换的枢纽，十年内战基本结束，国内和平初步实现）。
 
 1936年7月—1939年4月:star:西班牙内战（二战前奏，共和政府军与左翼联盟对抗以法西斯弗朗哥为中心的西班牙国民军右翼集团）。
 
@@ -201,9 +201,9 @@
 
 1937年。:star:2月，中共提出停止内战等五项要求，若国民党将这五项要求定为国策，则共产党愿意实行包括武力推翻国民党政府的方针在内的四项保证。上述主张引起巨大反响和赞同。:star:2月国民党五届三中全会（国共两党第二次合作不可阻挡，同意国共两党谈判，并在会议文件上**第一次写上了“抗日”的字样**）。:star:夏，毛泽东《实践论》《矛盾论》（揭露和批判了长期存在于党内的主观主义错误尤其是教条主义错误，科学的阐明了党的马克思主义的思想路线）。:star:7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，中国抗日战争进入全民族抗战的新时期，开辟了世界反法西斯战争的东方主战场，21天后北平沦陷，中日之间以完全处于战争状态，国民政府仅发表了《自卫抗战声明书》，并未正式对日宣战。:star:8月国共两党达成协议（八路军、新四军）。:star:8月中共**洛川会议**（抗日救国十大纲领，人民战争路线，打到日本帝国主义关键在于使已发动的抗战成为全面的全民族抗战）。:star:8月13日—11月12日，淞沪会战，上海沦陷。:star:9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”:star:。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。:star:9月—11月太原会战，9月八路军**平型关大捷**是全民族抗战以来中国军队主动寻歼敌人的一次重大胜利，打破了日军不可战胜的神话；11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位。:star:9月22日国民党《中国共产党为公布国共合作宣言》。:star:9月23日蒋介石发表实际承认共产党合法地位的谈话，第二次国共合作（1937-1945，党外合作，没有正式的固定组织形式和统一的纲领），以**国共两党第二次合作**作为基础的**抗日民族统一战线**形成。:star:11月华北战场忻口会战。:star:11月20日迁移国民政府于重庆。:star:11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。:star:12月南京沦陷（**南京大屠杀**）。:star:本年，苏联第二个五年计划完成，苏联的工业生产总值跃居欧洲第一，世界第二。
 
-1938年。:star:1月至5月台儿庄战役、徐州会战。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月至11月，**中共六届六中全会**（明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六届六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。
+1938年。:star:1月至5月台儿庄战役、徐州会战。:star:3月，德意志与奥地利合并。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月，慕尼黑会议，割让捷克斯洛伐克苏台德领土给德国。:star:9月至11月，**中共六届六中全会**（明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六届六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。
 
-1939年。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。:star:9月1日德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，宪政运动（批评国民党一党专政）。:star:10月，毛泽东**《<共产党人>发刊词》**，**第一次提出党在革命中的三大法宝**（统一战线、武装斗争、党的建设)。第一次提出“马克思列宁主义的理论和中国革命的实践相结合”。**第一次把党的建设称为“伟大的工程”**。指出统一战线和武装斗争是中国共产党领导的中国资产阶级民主革命的两个基本特点；是中国革命的两个武器，党组织是掌握这两个武器的英勇战士。:star:11月，苏芬战争。:star:12月，毛泽东**《中国革命和中国共产党》**，**第一次提出新民主主义以及新民主主义革命**这两个科学概念。第一次全面系统论述中国半殖民地半封建的社会性质问题，提出革命对象、革命动力；强调认清中国国情“乃是认清一切革命问题的基本的依据”。第一次提出“所谓新民主主义的革命，就是在无产阶级领导之下的人民大众的反帝反封建的革命”；**明确提出，“帝国主义和中华民族的矛盾，封建主义和人民大众的矛盾”，构成近代中国社会的主要矛盾**。
+1939年。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。:star:9月1日，德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，**宪政运动**（批评国民党一党专政）。:star:10月，毛泽东**《<共产党人>发刊词》**，**第一次提出党在革命中的三大法宝**（统一战线、武装斗争、党的建设)。第一次提出“马克思列宁主义的理论和中国革命的实践相结合”。**第一次把党的建设称为“伟大的工程”**。指出统一战线和武装斗争是中国共产党领导的中国资产阶级民主革命的两个基本特点；是中国革命的两个武器，党组织是掌握这两个武器的英勇战士。:star:11月，苏芬战争。:star:12月，毛泽东**《中国革命和中国共产党》**，**第一次提出新民主主义以及新民主主义革命**这两个科学概念。第一次全面系统论述中国半殖民地半封建的社会性质问题，提出革命对象、革命动力；强调认清中国国情“乃是认清一切革命问题的基本的依据”。第一次提出“所谓新民主主义的革命，就是在无产阶级领导之下的人民大众的反帝反封建的革命”；**明确提出，“帝国主义和中华民族的矛盾，封建主义和人民大众的矛盾”，构成近代中国社会的主要矛盾**。
 
 1940年。:star:1月，毛泽东发表**《新民主主义论》**，系统阐述新民主主义理论，新民主主义理论的提出和系统阐明，是马克思主义中国化的重大理论成果，标志着毛泽东思想得到多方面展开而趋于成熟，指出中国革命必须分两步走：民主革命、社会主义革命。提出了新民主主义的政治、经济和文化，论述了新民主主义共和国的国体、政体。:star:3月汪精卫在南京成立**伪“中华民国国民政府”**。:star:3月苏芬战争结束。:star:4月9日德国攻击丹麦和挪威。:star:5月敦刻尔克大撤退。:star:6月22日，法国正式投降。:star:8月至次年1月，百团大战。:star:8月，创办延安自然科学院。:star:10月19日，国民政府致电(即“**皓电**”)八路军新四军对中国共产党及其领导的武装力量进行种种攻击和诬蔑（其中特别列举抗战以来华北、华中各地发生的摩擦事件，并将其原因归结于八路军和新四军），成为第二次反共高潮的起点。
 
@@ -211,11 +211,11 @@
 
 1942年。:star:1月《联合国家宣言》。:star:1月，第三次长沙会战（给日军有力打击）。:star:2月，中国**远征军**进入缅甸抗日。:star:2月**《整顿党的作风》《反对党八股》**（提出反对主观主义以整顿学风、反对宗派主义以整顿党风、反对党八股以整顿文风；整风运动在全党普遍展开）。5月，毛泽东**《在延安文艺座谈会上的讲话》**，第一次提出“为什么人的问题，是一个根本的问题原则的问题”，即“基本上是一个为群众的问题和个如何为群众的问题”。:star:7月至次年2月，**斯大林格勒战役**（二战转折点）。:star:**中途岛海战**，太平洋战争转折点。
 
-1943年。:star:5月15日，第三国际执委会主席团拟定关于解散第三国际的提议书，提交各国支部讨论，得到各国共产党的同意。:star:6月10日，**第三国际正式宣告解散**。:star:11月德黑兰会议（开辟西欧第二战场，建立维护和平的国际组织，巴尔干、法国、远东、芬兰以及波兰疆界等问题，《德黑兰宣言》）。:star:12月《开罗宣言》，协调对日作战的共同军事问题和战后处置日本等，从法律上明确了日本侵占台湾的非法性，确认了台湾是中国领土，东北、台湾、澎湖列岛等归还中国。
+1943年。:star:5月15日，第三国际执委会主席团拟定关于解散第三国际的提议书，提交各国支部讨论，得到各国共产党的同意。:star:6月10日，**第三国际正式宣告解散**。:star:11月，**德黑兰会议**（开辟西欧第二战场，建立维护和平的国际组织，巴尔干、法国、远东、芬兰以及波兰疆界等问题，《德黑兰宣言》）。:star:12月《开罗宣言》，协调对日作战的共同军事问题和战后处置日本等，从法律上明确了日本侵占台湾的非法性，确认了台湾是中国领土，东北、台湾、澎湖列岛等归还中国。
 
 1944年。:star:5月11日，豫湘桂战役（国民党军队大溃退）。:star:5月21日—翌年4月20日，中共扩大的**六届七中全会**在延安召开。全会通过毛泽东为中央委员会主席的提议，原则通过**《关于若干历史问题的决议》**，肯定了确立毛泽东在全党的领导地位的重大意义，使全党尤其是党的高级干部对中国民主革命基本问题的认识达到在马克思列宁主义基础上的一致。至此，**整风运动胜利结束**。整风运动是一次深刻的马克思主义思想教育运动，收到巨大成效。通过整风运动，实现了在以毛泽东同志为核心的党中央领导下全党新的团结和统一，为抗日战争的胜利和新民主主义革命在全国的胜利，奠定了重要的思想政治基础。延安整风运动所积累的经验对党的建设具有重大而深远的意义。:star:6月**诺曼底登陆**。:star:7月联合国国际货币金融会议（布雷顿森林货币体系，二战后以美元为中心的国际货币体系，外汇自由化、资本自由化和贸易自由化为主要内容的多边经济制度，构成资本主义集团的核心内容）。:star:9月，提出联合政府主张。:star:本年 中国共产党领导敌后军民在华北、华中、华南地区发起局部反攻，歼灭日、伪军近20万人，收复大片国土，解放人口1700多万。
 
-1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议《联合国宪章》，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
+1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张；新民主主义的经济纲领，没收封建土地归农民、没收官僚资产阶级的垄断资本归新民主主义国家所有、保护民族工商业，其中保护民族工商业是新民主主义经济纲领中极具特色的一项内容。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议《联合国宪章》，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
 
 ## **1945~1949：:star:解放战争时期**
 
@@ -320,7 +320,7 @@
 
 1978年。:star:3月第五届全国人民代表大会（提前一年召开）第一次会议上第三部《中华人民共和国宪法》通过（七八宪法，宪法3.0）。:star:11月安徽小岗村”**大包干**“。:star:11月，邓小平**《解放思想、实事求是，团结一致向前看》**（冲破两个”凡是“，开辟了中国特色社会主义新道路、新理论）。:star:12月16日，中美公布关于建立外交关系的联合公报，宣布自1979年1月1日起互相承认并建立外交关系，美国宣布于1979年1月1日断绝同台湾当局的所谓“外交关系”。:star:12月 至 1991年10月，柬越战争（越南社会主义共和国和民主柬埔寨）。:star:12月18日至22日，**中共十一届三中全会**，伟大转折；冲破长期“左”的错误的严重束缚，彻底否定两个”凡是“；果断停止使用“以阶级斗争为纲”的口号，决定把党的工作重心转移到社会主义现代化建设上来，提出了改革开放的任务，强调要充分发扬民主，以邓小平为核心，**改革开放**；强调要正确对待毛泽东的历史地位和毛泽东思想的科学体系为坚持和发展毛泽东思想指明了方向。党的十一届三中全会是划时代的，开启了改革开放和社会主义现代化建设新时代。
 
-# **1978年12月：:star:中国开始走上改革开放的道路。**
+# **1978年12月到2012年11月:star:改革开放与社会主义现代化建设新时期**
 
 1979年12月24日 至 1989年2月15日：:star:苏联-阿富汗战争。
 
@@ -388,7 +388,7 @@
 
 2009年。:star:3月，指出建设覆盖城乡居民的基本医疗卫生制度。:star:9月中共十七届四中全会（提出加强和改进党的建设的总体要求、目标任务、重要举措）。
 
-2010年。:star:1月1日，中国—东盟自由贸易区正式全面启动。:star:4月30日 2010年上海世界博览会举行开幕式。这是中国首次举办的综合性世界博览会，10月31日，博览会闭幕。:star:本年，中国成为世界第二大经济体。
+2010年。:star:1月1日，中国—东盟自由贸易区正式全面启动。:star:4月30日 2010年上海世界博览会举行开幕式。这是中国首次举办的综合性世界博览会，10月31日，博览会闭幕。:star:本年，中国成为世界第二大经济体。:star:阿拉伯之春，阿拉伯世界的颜色革命，持续近十年，阿拉伯动荡更多，暴力愈烈，自由益少。旧的制度被推倒了，新的道路却始终看不真切，西方曾许诺的“民主”和“自由”像是虚无缥缈的空中楼阁，离地太远遥不可及。
 
 2011年。:star:10月，中共十七届六中全会召开，提出坚持中国特色社会主义文化发展道路、努力建设社会主义文化强国的战略任务。
 
