--- a/计网/导论.md
+++ b/计网/导论.md
@@ -335,5 +335,7 @@ TCP/IP模型与OSI参考模型有许多相似之处。
 - 第三，TCP/IP模型在设计之初就考虑到了多种异构网的互连问题，并将网际协议(IP)作为一个单独的重要层次。OSI参考模型最初只考虑到用一种标准的公用数据网将各种不同的系统互连。OSI参考模型认识到IP的重要性后，只好在网络层中划分出一个子层来完成类似于TCP/IP模型中的IP的功能。
 - 第四，**OSI参考模型在网络层支持无连接和面向连接的通信，但在传输层仅有面向连接的通信。而TCP/IP模型认为可靠性是端到端的问题，因此它在网际层仅有一种无连接的通信模式，但传输层支持无连接和面向连接两种模式。**
 
+## 数据传输过程
+
 最后简单介绍使用通信协议栈进行通信的结点的数据传输过程。**每个协议栈的最顶端都是一个面向用户的接口，下面各层是为通信服务的协议。用户传输一个数据报时，通常给出用户能够理解的自然语言，然后通过应用层，将自然语言会转化为用于通信的通信数据。通信数据到达传输层，作为传输层的数据部分（传输层SDU)，加上传输层的控制信息（传输层PCI)，组成传输层的PDU，然后交到网络层，传输层的PDU下放到网络层后，就成为网络层的SDU，然后加上网络层的PCI，又组成了网络层的PDU，下放到数据链路层，就这样层层下放，层层包裹，最后形成的数据报通过通信线路传输，到达接收方结点协议栈，接收方再逆向地逐层把“包裹”拆开，然后把收到的数据提交给用户**，如图1.14所示。
 ![image-20231113102422261](assets/image-20231113102422261.png)
