--- a/计网/数据链路层.md
+++ b/计网/数据链路层.md
@@ -263,7 +263,7 @@ S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最
 
 **后退N帧ARQ 、选择性重传ARQ是滑动窗口技术与请求重发技术的结合**，由于窗口尺寸开到足够大时，帧在线路上可以连续地流动，因此又称其为**连续ARQ协议**。注意，在数据链路层中流量控制机制和可靠传输机制是交织在一起的。
 
-## 单帧滑动窗口与停止等待协议
+## 停止-等待ARQ：单帧滑动窗口与停止等待协议
 
 在停止——等待协议中，源站发送单个帧后必须等待确认，在目的站的回答到达源站之前，源站不能发送其他的数据帧。从滑动窗口机制的角度看，**停止~等待协议相当于发送窗口和接收窗口大小均为1的滑动窗口协议**。
 
@@ -278,7 +278,7 @@ S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最
 
 ![image-20231113215337338](assets/image-20231113215337338.png)
 
-## 多帧滑动窗口与后退N帧协议（GBN）
+## 后退N帧ARQ：多帧滑动窗口与后退N帧协议（GBN）
 
 在后退N帧式ARQ中，发送方无须在收到上一个帧的ACK后才能开始发送下一帧，而是可以**连续发送帧**。
 
@@ -294,7 +294,7 @@ S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最
 ![image-20231113215807263](assets/image-20231113215807263.png)
 后退N帧协议一方面因连续发送数据帧而提高了信道的利用率，另一方面在**重传时又必须把原来已传送正确的数据帧进行重传**（仅因这些数据帧的前面有一个数据帧出了错)，这种做法又使传送效率降低。由此可见，若信道的传输质量很差导致误码率较大时，后退N帧协议不一定优于停止-等待协议。
 
-## 多帧滑动窗口与选择重传协议（SR）
+## 选择性重传ARQ：多帧滑动窗口与选择重传协议（SR）
 
 为进一步提高信道的利用率，可设法只重传出现差错的数据帧或计时器超时的数据帧，但此时必须加大接收窗口，以便先收下发送序号不连续但仍处在接收窗口中的那些数据帧。等到所缺序号的数据帧收到后再一并送交主机。这就是**选择重传ARQ协议**。
 
@@ -1281,6 +1281,10 @@ X.25的缺陷：
 4. 帧中继允许的帧大小为9000字节，这适合于所有的局域网帧。
 5. 帧中继比其他传统的广域网花费少。
 6. 帧中继仅在数据链路层有错误检测，没有流量或错误控制。当一个帧被破坏时，它甚至没有一个重发策略，该帧只是简单地被丢弃。使用这种方式设计帧中继为更可靠的介质和在更高层上有流量和差错控制的协议提供更快的传输能力。
+
+![image-20231121173151195](assets/image-20231121173151195.png)
+
+
 
 ### 结构
 
