--- a/计网/物理层.md
+++ b/计网/物理层.md
@@ -124,7 +124,7 @@
 单极编码方案：在单级编码方案中，所有的信号电平都在时间轴的一边，或者时间轴的上面或者时间轴的下面。
 
 - **单级编码方案**：
-  - 一般，单级编码方案设计成**单极不归零（单极NRZ）方案**，在此方案中正电平定义成位 1 而零电平定义成位0。之所以称为 NRZ ，是因为在位中间信号不会回到零。
+  - 一般，单级编码方案设计成**单极不归零（单极NRZ）方案**，在此方案中**正电平定义成位 1 而零电平定义成位0**。之所以称为 NRZ ，是因为在位中间信号不会回到零。
   - 与它的极性对应方案相比，这个方案成本很高。正如我们很快会看到的，标准功率(每个单元线路阻抗发送 1 位所需的功率)是极性NRZ方案的两倍。基于这个原因，现在这个方案不用于数据通信中。
   - ![image-20231113152137014](assets/image-20231113152137014.png)
 
@@ -145,6 +145,7 @@
   - 极性意外改变会导致所有的 0被解释成所有的 1 ，而所有的 1 被解释成所有的0的问题同样存在，但
     没有 DC成分问题。
   - RZ使用三个电平，这样生成和辨别更加困难。这些缺陷使得今天不再使用这个方案
+  - ![image-20231121171019943](assets/image-20231121171019943.png)
 
 **双相编码**：**曼彻斯特编码**和**差分曼彻斯特编码**。
 
@@ -269,7 +270,7 @@ PCM主要包括三个步骤：**采样、量化、编码**
 1. **无须建立连接**。报文交换不需要为通信双方预先建立一条专用的通信线路，不存在建立连接时延，用户可以随时发送报文。
 2. **动态分配线路**。当发送方把报文交给交换设备时，交换设备先存储整个报文，然后选择一条合适的空闲线路，将报文发送出去。
 3. **提高线路可靠性**。如果某条传输路径发生故障，那么可重新选择另一条路径传输数据，因此提高了传输的可靠性。
-4. **提供线路利用率**。通信双方不是固定占有一条通信线路，而是在不同的时间一段一段地部分占有这条物理通道，因而大大提高了通信线路的利用率。
+4. **提高线路利用率**。通信双方不是固定占有一条通信线路，而是在不同的时间一段一段地部分占有这条物理通道，因而大大提高了通信线路的利用率。
 5. **提供多目标服务**。一个报文可以同时发送给多个目的地址，这在电路交换中是很难实现的。
 
 报文交换技术的**缺点**：
@@ -623,7 +624,6 @@ FTTx是“光纤到x（Fiber To The x）”,是光纤通信中光纤接入的总
 ![image-20231115211512552](assets/image-20231115211512552.png)
 ![image-20231115211520532](assets/image-20231115211520532.png)
 ![image-20231115211210894](assets/image-20231115211210894.png)
-
 
 
 
