--- a/计网/网络层.md
+++ b/计网/网络层.md
@@ -380,7 +380,7 @@ DHCP 允许网络上配置多台 DHCP 服务器;通常挑选最先到达的
 
 DHCP 服务器分配给 DHCP 客户的IP 地址是**临时的**，因此 DHCP 客户只能在一段有限的时间内使用这个分配到的 IP 地址。DHCP 称这段时间为**租用期**。租用期的数值应由 DHCP 服务器自己决定，DHCP 客户也可在自己发送的报文中提出对租用期的要求。
 
-DHCP 的客户端和服务器端需要通过广播方式来进行交互，原因是在 DHCP 执行初期，客户端不知道服务器端的 P 地址，而在执行中间，客户端并未被分配 P 地址，从而导致两者之间的通信必须采用广播的方式。
+DHCP 的客户端和服务器端需要通过广播方式来进行交互，原因是在 DHCP 执行初期，客户端不知道服务器端的 IP 地址，而在执行中间，客户端并未被分配 IP 地址，从而导致两者之间的通信必须采用广播的方式。
 
 采用UDP 而不采用TCP 的原因也很明显:TCP 需要建立连接，如果连对方的IP 地址都不知道，那么更不可能通过双方的套接字建立连接。
 
