--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -264,7 +264,7 @@
 
 1955年。:star:4月18日—24日，周恩来，亚非会议，中国代表团本着“求同存异”的方针，同其他与会国家一起，共同倡导形成“万隆精神”，通过这次会议，中国打开了与亚非国家广泛交往的大门。:star:10月1日，新疆维吾尔自治区成立。:star:5月14日，华沙条约组织（华约）建立。
 
-1956年。:star:4月初，毛泽东提出**马克思基本原理与中国具体实际”第二次结合“**的任务。:star:4月25日毛泽东**《论十大关系》**。中国共产党人开始探索自己的社会主义建设道路的标志，基本方针是调度一切积极因素为社会主义建设服务。第一大关系即重工业、轻工业、农业的关系，以农业为基础，以工业为主导，以农轻重为序发展国民经济的总方针，以及一整套“两条腿走路”的工业化发展道路（重工业和轻工业同时并举，中央工业和地方工业同时并举，沿海工业和内地工业同时并举，大型企业和小型企业同时并举等等）；四个现代化：工业、农业、科学、国防；报告强调要调动国内外一切积极因素，为建设强大的社会主义国家而奋斗，并初步总结我国社会主义建设经验，提出探索适合中国情况的建设社会主义道路的任务，报告还提出共产党和民主党派“长期共存，互相监督”的方针。:star:9月中国共产党第八次全国代表大会，**党八大**，北京，正确分析了国内形势和主要矛盾的变化，明确提出新形势下党和人民的主要任务；提出了正确的路线，为社会主义事业的发展和党的建设指明了方向；指出：“**我们国内的主要矛盾，已经是人民对于建立先进的工业国的要求同落后的农业国的现实之间的矛盾，已经是人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾**。”党的八大关于社会主要矛盾的正确判断**开启了全面建设社会主义的高潮**，但后来我们党对社会主要矛盾的分析判断偏离了八大的正确方向，这给国家建设和发展带来了不利影响。全国人民的主要任务是集中力量发展社会生产力，实现国家工业化，逐步满足人民日益增长的物质文化需要；提出了**既反保守又反冒进**，即在综合平衡中稳步前进的经济建设方针。肯定陈云提出的“三个主体，三个补充”的思想，这是在理论上突破苏联计划经济模式，探索经济体制改革的重要尝试。政治建设上提出要扩大社会主义民主、健全社会主义法治，使党和政府的活动做到“有法可依”和“有法必依”。:star:到年底，生产资料私有制的社会主义改造取得决定性胜利。:star:1月至2月，普通话、简体字和拼音。:star:年底，**社会主义三大改造基本完成**，社会主义制度建立起来，社会主义过渡时期结束，我国由一个新民主主义的国家转变为社会主义国家，进入**社会主义初级阶段**，进入了全面建设社会主义的历史阶段。
+1956年。:star:1月至2月，普通话、简体字和拼音。:star:4月初，毛泽东提出**马克思基本原理与中国具体实际”第二次结合“**的任务。:star:4月25日毛泽东**《论十大关系》**。中国共产党人开始探索自己的社会主义建设道路的标志，基本方针是调度一切积极因素为社会主义建设服务。第一大关系即重工业、轻工业、农业的关系，以农业为基础，以工业为主导，以农轻重为序发展国民经济的总方针，以及一整套“两条腿走路”的工业化发展道路（重工业和轻工业同时并举，中央工业和地方工业同时并举，沿海工业和内地工业同时并举，大型企业和小型企业同时并举等等）；四个现代化：工业、农业、科学、国防；报告强调要调动国内外一切积极因素，为建设强大的社会主义国家而奋斗，并初步总结我国社会主义建设经验，提出探索适合中国情况的建设社会主义道路的任务，报告还提出共产党和民主党派“长期共存，互相监督”的方针。:star:9月中国共产党第八次全国代表大会，**党八大**，北京，正确分析了国内形势和主要矛盾的变化，明确提出新形势下党和人民的主要任务；提出了正确的路线，为社会主义事业的发展和党的建设指明了方向；指出：“**我们国内的主要矛盾，已经是人民对于建立先进的工业国的要求同落后的农业国的现实之间的矛盾，已经是人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾**。”党的八大关于社会主要矛盾的正确判断**开启了全面建设社会主义的高潮**，但后来我们党对社会主要矛盾的分析判断偏离了八大的正确方向，这给国家建设和发展带来了不利影响。全国人民的主要任务是集中力量发展社会生产力，实现国家工业化，逐步满足人民日益增长的物质文化需要；提出了**既反保守又反冒进**，即在综合平衡中稳步前进的经济建设方针。肯定陈云提出的“三个主体，三个补充”的思想，这是在理论上突破苏联计划经济模式，探索经济体制改革的重要尝试。政治建设上提出要扩大社会主义民主、健全社会主义法治，使党和政府的活动做到“有法可依”和“有法必依”。:star:10月到11月，波匈事件，。:star:到年底，生产资料私有制的社会主义改造取得决定性胜利。:star:年底，**社会主义三大改造基本完成**，社会主义制度建立起来，社会主义过渡时期结束，我国由一个新民主主义的国家转变为社会主义国家，进入**社会主义初级阶段**，进入了全面建设社会主义的历史阶段。
 
 ## **1956年年底至1966年5月:star:全面建设社会主义时期。**
 
