--- a/English/作文积累.md
+++ b/English/作文积累.md
@@ -95,3 +95,31 @@ vt.
 
 n.
 场景;(尤指不愉快事件发生的)地点，现场;场面;景象;情景;镜头;事件;（戏剧或歌剧的）场;片段;争吵，吵闹;活动领域;表现…景色的绘画（或摄影）作品
+
+# auditorium
+
+英
+/ˌɔːdɪˈtɔːriəm/
+
+美
+/ˌɔːdɪˈtɔːriəm/
+
+n.
+礼堂;(剧院、音乐厅等的)听众席，观众席;会堂
+
+# Selfless dedication
+
+无私奉献
+
+# dedicate
+
+vt.奉献;(在书、音乐或作品的前部)题献词;为…举行奉献典礼;为(建筑物等)举行落成典礼
+
+# 邀请
+
+we would like to invite you to attend the ... located at ... (place) on ... (date)
+
+the event is prepared in the intention to ...  这次活动是为了
+
+we would appreciate if you can attend this event as you are ...
+
