--- a/math/张8.md
+++ b/math/张8.md
@@ -1,14 +1,14 @@
 # 第一套
 
-6.:new:
+6.:new:二次型，判断二次型的几何类型要看f(x,x,x)=1还是f(x,x,x)=0
 
-10. :new:
+10. :new:显著水平，第一类错误的概率
 
-13.:red_circle:
+13.:red_circle:微分方程的结构， 微分方程反解
 
-15.:red_circle:
+15.:red_circle:向量、求 基
 
-16.:new:
+16.:new:条件 期望
 
 21.（2）:red_circle:
 
