--- a/politics/习思.md
+++ b/politics/习思.md
@@ -533,6 +533,8 @@
 
 文化是一个国家、一个民族的灵魂。文化自信是更基础、更广泛、更深厚的自信，是一个国家、一个民族发展中更基本、更深沉、更持久的力量。
 
+在新的起点上继续**推动文化繁荣、建设文化强国、建设中华民族现代文明**，是我们在新时代新的文化使命
+
 ### 建设具有具有强大凝聚力和引领力的社会主义意识形态
 
 意识形态工作是为国家立心、为民族立魂的工作
@@ -704,7 +706,7 @@
 
 - 必须坚持改革往有利于维护社会公平正义、增进人民福祉方向前进
 
-  促进社会公平正义、增进人民福祉是全面深化改革的出发点和落脚点，是坚持党全心全意为人民服务根本宗旨的必然要求
+  促进社会公平正义、增进人民福祉是全面深化改革的**出发点和落脚点**，是坚持党全心全意为人民服务根本宗旨的必然要求
 
 - 必须坚持社会主义市场经济改革方向
 
@@ -712,9 +714,9 @@
 
 #### 总目标
 
-- 党的十八届三中全会，提出全面深化改革的总目标是完善和发展中国特色社会主义制度，推进国家治理体系和治理能力现代化。
-- 根本方向：完善和发展中国特色社会主义制度
-- 实现路径：推进国家治理体系和治理能力现代化
+- 党的十八届三中全会，提出全面深化改革的**总目标**是完善和发展中国特色社会主义制度，推进国家治理体系和治理能力现代化。
+- **根本方向**：完善和发展中国特色社会主义制度
+- **实现路径**：推进国家治理体系和治理能力现代化
 
 #### 国家治理体系和治理能力及其关系
 
@@ -844,16 +846,18 @@
 
 我们党作为世界上最大的马克思主义执政党，要始终赢得人民用户、巩固长期执政地位，必须时刻保持解决大党独有难题的清醒和坚定。
 
+最彻底的自我革命是**反腐败**。
+
 ### 新时代党的建设总要求
 
 我们党面临的执政环境是复杂的，影响党的先进性、弱化党的纯洁性的因素也是复杂的，党内存在的思想不纯、组织不纯、作风不纯等突出问题尚未得到根本解决。党面临的**执政考验、改革开放考验、市场经济考验、外部环境考验**具有长期性和复杂性，党面临的**精神懈怠危险、能力不足危险、脱离群众危险、消极腐败危险**具有尖锐性和严峻性。**我们要落实新时代党的建设总要求，健全全面从严治党体系，全面推进党的自我净化、自我完善、自我革新、自我提高，使我们党坚守初心使命，始终成为中国特色社会主义事业的坚强领导核心。**
 
-**总要求**：坚持和加强党的全面领导，坚持党要管党、全面从严治党，以加强党的长期执政能力建设、先进性和纯洁性建设为**主线**，以党的政治建设为**统领**，以坚定理想信念宗旨为**根基**，以调动全党积极性、主动性、创造性为**着力点**，全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设，**把制度建设贯穿其中**，深入推进反腐败斗争，不断提高党的建设质量，把党建设成为始终走在时代前列、人民衷心拥护、勇于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党。
+**总要求**：坚持和加强党的全面领导，坚持党要管党、全面从严治党，以加强党的长期执政能力建设、先进性和纯洁性建设为**主线**，以党的政治建设为**统领**，以坚定理想信念宗旨为**根基**，以调动全党积极性、主动性、创造性为**着力点**，全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设，**把制度建设贯穿其中**，深入推进反腐败斗争，不断提高党的建设质量，把党建设成为始终走在时代前列、人民衷心拥护、勇于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党。全面从严治党的**治本之策**是加强纪律建设。
 
-- 第一，原则是坚持和加强党的全面领导
-- 第二，方针是坚持党要管党，全面从严治党。“全面”是基础；“严”是关键；“治”是要害；
-- 第三，主线是加强党的长期执政能力建设、先进性和纯洁性建设
-- 第四，布局是以党的政治建设为统领，全面推进党的政治建设、思想建设、组织建设、作风建设、纪律建设，把制度建设贯穿其中，深入推进反腐败斗争
+- 第一，**原则**是坚持和加强党的全面领导
+- 第二，**方针**是坚持党要管党，全面从严治党。“全面”是基础；“严”是关键；“治”是要害；
+- 第三，**主线**是加强党的长期执政能力建设、先进性和纯洁性建设
+- 第四，布局是**以党的政治建设为统**领，全面推进党的**政治建设、思想建设、组织建设、作风建设、纪律建设**，把制度建设贯穿其中，深入推进反腐败斗争
 - 第五，目标是建设始终走在时代前列、人民衷心拥护、勇于自我革命、经得起各种风浪考验、朝气蓬勃的马克思主义执政党。
 
 ### 把党的政治建设摆在首位
@@ -898,13 +902,13 @@
 
 ### 科学内涵
 
-国家安全是民族复习的根基，社会稳定是国家强盛的前提
+**国家安全是民族复习的根基，社会稳定是国家强盛的前提**
 
-政治安全是维护人民安全和国家利益的根本保证。首要位置、首要任务。
+**政治安全是维护人民安全和国家利益的根本保证。首要位置、首要任务。**
 
-人民安全居于中心地位，国家安全归根结底是保障人民利益；
+**人民安全居于中心地位，国家安全归根结底是保障人民利益；**
 
-国家利益至上是实现政治安全和人民安全的要求和原则。
+**国家利益至上是实现政治安全和人民安全的要求和原则。**
 
 要把政治安全、人民安全、国家利益至上三者统一起来，确保实现党的长期执政、人民安居乐业、国家长治久安。
 
@@ -947,20 +951,20 @@
 
 1. 强军使命。明确强国必须强军，巩固国防和强大人民军队是新时代坚持和发展中国特色社会主义、实现中华民族伟大复兴的战略支撑。
 2. 强军目标。明确党在新时代的强军目标是建设一支听党指挥、能打胜仗、作风优良的人民军队，必须听国家现代化进程相一致，力争到2035年基本实现国防和军队现代化，到21世纪中叶把人民军队全面建成世界一流军队。
-3. 强军之魂。明确党对军队的绝对领导是人民军队的建军之本、强军之魂。
+3. 强军之魂。明确**党对军队的绝对领导是人民军队的建军之本、强军之魂**。
 4. 强军之要。明确军队是要准备打仗的
-5. 强军之基。明确作风优良是我军鲜明特色和政治优势。
+5. 强军之基。明确**作风优良是我军鲜明特色和政治优势**。
 6. 强军布局，明确推进强军事业必须坚持政治建军、改革强军、科技强军、人才强军、依法治军，全面提高革命化现代化正规化水平。政治建军是人民军队的立军之本；改革是我军发展壮大、制胜未来的关键一招；科技是现代战争的核心战斗力，一流军队必须有一流军事科技；依法治军、从严治军是我们党建军治军的基本方略。
-7. 强军关键。明确改革是强军的必由之路
-8. 强军动力。明确创新是引领发展的第一动力，必须坚持向科技创新要战斗力
-9. 强军保障。明确现代化军队必须构建中国特色军事法治体系
+7. 强军关键。明确**改革是强军的必由之路**
+8. 强军动力。明确**创新是引领发展的第一动力，必须坚持向科技创新要战斗力**
+9. 强军保障。明确现代化军队必须构建**中国特色军事法治体系**
 10. 强军路径。明确军民融合发展是兴国之举、强军之策，必须坚持发展和安全兼顾、富国和强军统一，形成全要素、多领域、高效益军民融合深度发展格局
 
 ### 实现党在新时代的强军目标
 
-1. 听党指挥是灵魂，决定军队建设的政治方向。党对军队军队领导的根本原则和制度，发端于南昌起义，奠基于三湾改编，定型于古田会议，是人民军队完全区别于一切旧军队的政治特征和根本优势。
-2. 能打胜仗是核心，反映军队的根本职能和军队建设的根本方向。能打仗、打胜仗是党和人民对军队的根本要求，是军队使命职责之所在、军队存在的根本价值治所在。牢固树立战斗力这个唯一的根本的标准。
-3. 作风优良是保证，关系军队的性质、宗旨、本色。在长期实践中，我军培养和形成了一整套光荣传统和优良作风。
+1. **听党指挥是灵魂**，决定军队建设的政治方向。党对军队军队领导的根本原则和制度，发端于南昌起义，奠基于三湾改编，定型于古田会议，是人民军队完全区别于一切旧军队的政治特征和根本优势。
+2. **能打胜仗是核心**，反映军队的根本职能和军队建设的根本方向。能打仗、打胜仗是党和人民对军队的根本要求，是军队使命职责之所在、军队存在的根本价值治所在。牢固树立战斗力这个唯一的根本的标准。
+3. **作风优良是保证**，关系军队的性质、宗旨、本色。在长期实践中，我军培养和形成了一整套光荣传统和优良作风。
 
 ### 构建一体化的国家战略体系和能力（军民融合发展战略）
 
