--- a/politics/帽子题.md
+++ b/politics/帽子题.md
@@ -9,7 +9,8 @@
 5. **民主政治建设**的出发点和落脚点：**实现最广大人民根本利益**
 6. **文艺和文艺工作**的出发点和落脚点：**满足人民精神文化需求**
 7. **全军各项建设**的出发点和落脚点：**提高战斗力**
-8. **我国对外工作**的出发点和落脚点：**维护国家主权、安全、发展利益**
+8. **我国对外工作**的出发点和落脚点：**维护国家主权、安全、发展利益：**
+9. **经济社会发展**的出发点和落脚点，也是全面建成小康社会的核心要义所在：**保障和改善民生**
 
 # 战略基点
 
@@ -126,7 +127,10 @@
 
 # 关键
 
-**解放和增强社会活力**是社会主义改革的内在要求和基本目的，也是**新时代全面深化改革**的关键所在
+1. **解放和增强社会活力**是社会主义改革的内在要求和基本目的，也是**新时代全面深化改革**的关键所在
+2. 中国特色的关键就在于“两个结合”
+
+
 
 # 本质要求
 
