--- a/politics/要点.md
+++ b/politics/要点.md
@@ -1,10 +1,42 @@
+# 实体经济
+
+实体经济是一国经济的立身之本
+
+高质量发展是全面建设社会主义现代化国家的首要任务
+
+实体经济特别是制造业是推动国家现代化的物质技术基础，是推动国家进入现代经济增长轨道的主导力量。
+
+坚持把发展经济的着力点放在实体经济上，加快建设现代化产业体系，才能夯实构建新发展格局的物质技术基础，增强我国的生存力、竞争力、发展力、持续力，为推动高质量发展提供强大动力，把我国发展进步的命运牢牢掌握在自己手中
+
+实体经济是应对经济领域各种风险挑战的物质技术基础
+
+把发展经济的着力点放在实体经济上是建立有竞争力的现代化产业体系的需要
+
+牢牢把握加快建设以实体经济为支撑的现代化产业体系的重要任务
+
+全面建设社会主义现代化国家，必须高度重视以实体经济为支撑的现代化产业体系。
+
+以推动**创新驱动发展**与发展实体经济相结合，加快建设以实体经济为支撑的现代化产业体系。
+
+推动**数字经济发展**与实体经济发展深度融合，全面提升实体经济的数字化水平，推动数字产业实体化。
+
+深入推进实施**绿色发展战略**，推动绿色发展与实体经济发展相融合，充分发挥绿色化赋能实体经济发展效应。
+
+推动重点产业在国内外有序转移、促进国内外产业深度融合与实体经济发展相结合。
+
 # 教育
+
+以党坚持党对教育事业的全面领导为根本保证
 
 人民满意是发展教育的根本尺度
 
 立德树人是教育的根本任务
 
+以为党育人、为国育才为根本目标
+
 服务中华民族伟大复兴，是建设教育强国的重要使命
+
+以支撑引领中国式现代化为核心功能
 
 # 人的发展
 
@@ -63,3 +95,41 @@
 # 权利保障
 
 宪法保障、立法保障、行政保障、司法保障
+
+# 五个必由之路
+
+**坚持党的全面领导是坚持和发展中国特色社会主义的必由之路。**
+
+**中国特色社会主义是实现中华民族伟大复兴的必由之路**
+
+**团结奋斗是中国人民创造历史伟业的必由之路**
+
+**贯彻新发展理念是新时代我国发展壮大的必由之路**
+
+**全面从严治党是党永葆生机活力、走好新的赶考之路的必由之路**
+
+# 中国式现代化 
+
+走自己的路，是党的全部理论和实践立足点。
+
+人口规模巨大的现代化，这是中国式现代化的**显著特征**。
+
+全体人民共同富裕的现代化，这是中国式现代化的**本质特征**。
+
+有坚持把实现人民对美好生活的向往作为现代化建设的**出发点和落脚点**，着力维护和促进社会公平正义，才能促进全体人民共同富裕。
+
+物质文明和精神文明相协调的现代化，既要物质富足也要精神富有，是中国式现代化的**崇高追求**。
+
+人与自然和谐共生的现代化，尊重自然、顺应自然、保护自然，促进人与自然和谐共生，是中国式现代化的**鲜明特点**。
+
+走和平发展道路的现代化，坚持和平发展，在坚定维护世界和平与发展中谋求自身发展，又以自身发展更好维护世界和平与发展，推动构建人类命运共同体，是中国式现代化的**突出特征**。
+
+# 全面深化改革
+
+发展是党执政兴国的**第一要务**
+
+发展的出发点和落脚点是满足人民对美好生活的新期待
+
+# 社会治理体系
+
+共建是共同参与社会建设，要求突出制度和体系建设的基础性、战略性地位，是社会治理的基础；共治是共同参与社会治理，要求树立大社会观、大治理观，打造全民参与的开放治理体系，是社会治理的关键；共享是共同享有社会治理成果，要求社会治理的成效更多更公平地惠及全体人民，是社会治理的目标。
