--- a/数据结构/数据结构复习/算法.md
+++ b/数据结构/数据结构复习/算法.md
@@ -17,3 +17,36 @@
 分治策略的应用
 
 - 
+
+# 01背包的动态规划算法
+
+knapsack算法
+
+![image-20231207112538320](assets/image-20231207112538320.png)
+
+```c
+template<class Type>
+void Knapsack(Type v, int w,int c,int n,Type** m){//v为价值数组、w为重量数组，c为容量，n为物品个数，m[i][j]保存价值
+    int jMax = min(w[n],c);
+    for(int j=0;j<=jMax;j++) m[n][j]=0;
+    for(int j=w[n];j<=c;j++) m[n][j]=v[n];//最后一行
+    for(int i=n-1;i>1;i--){
+        jMax=min(w[i]-1,c);
+        for(int j=0;j<=jMax;j++) m[i][j]=m[i+1][j];//容积小于重量w[i]的与i+1行相同
+        for(int j=w[i];j<=c;j++) m[i][j]=max(m[i+1][j],m[i+1][j-w[i]]+v[i]);//容积大于等于时，比较
+    }
+    m[1][c]=m[2][c];
+    if(c>=w[1]) m[1][c]=max(m[1][c],m[2][c-w[1]]+v[1])
+}
+void TraceBack(Type v, int w,int c,int n,int x[]){
+    for(int i=1;i<n;i++){
+        if(m[i][c]==m[i+1][c]) x[i]=0;
+        else{
+            x[i]=1;
+            c -= w[i];
+        }
+    }
+    x[n]=(m[n][c])?1:0;
+}
+```
+
