--- a/计网/物理层.md
+++ b/计网/物理层.md
@@ -106,12 +106,12 @@
 3. 模拟数据编码为数字信号
 4. 模拟数据调制为模拟信号
 
-自同步：为了正确地解释从发送方接收到的信号，接收方的位间隔必须与发送方的位间隔严格对应。如果接收方的时钟快了或者慢了，位间隔就不会匹配，接收方可能会错误地解释信号
+**自同步**：为了正确地解释从发送方接收到的信号，接收方的位间隔必须与发送方的位间隔严格对应。如果接收方的时钟快了或者慢了，位间隔就不会匹配，接收方可能会错误地解释信号
 
-基线偏移：在解码数字信号时，接收方计算接收到信号功率的运行平均值。这个平均值称为基线(baseline) 。输入信号的功率会与基线比较来确定数据元素的值。一个0或 1 的长字符串会引起基线偏移(baseline wandering) ，使得接收方不能正确地进行解码。一个好的线路
+**基线偏移**：在解码数字信号时，接收方计算接收到信号功率的运行平均值。这个平均值称为基线(baseline) 。输入信号的功率会与基线比较来确定数据元素的值。一个0或 1 的长字符串会引起基线偏移(baseline wandering) ，使得接收方不能正确地进行解码。一个好的线路
 编码方案需要防止基线偏移。
 
-直流成分：当数字信号中的电平保持一段时间的恒定时，频谱会产生很低的频率(傅里叶分析的结果)。这些接近于零的频率称为 **DC** (直流)成分，会给不允许通过低频率的系统或者使用电子搞合的系统(如变压器)带来问题。例如，电话线不能通过低于200Hz的频率。还有，长距离的链路可能使用一个或多个变压器来隔离线路的不同部分。对于这些系统，我们使用无直流成分(DC component)的方案。
+**直流成分**：当数字信号中的电平保持一段时间的恒定时，频谱会产生很低的频率(傅里叶分析的结果)。这些接近于零的频率称为 **DC** (直流)成分，会给不允许通过低频率的系统或者使用电子搞合的系统(如变压器)带来问题。例如，电话线不能通过低于200Hz的频率。还有，长距离的链路可能使用一个或多个变压器来隔离线路的不同部分。对于这些系统，我们使用无直流成分(DC component)的方案。
 
 
 
@@ -143,14 +143,14 @@
   - 在每个位中间信号变成0。它保持到下一个位开始。
   - RZ编码的主要缺点：是它需要两个信号变化来编码一个位，因此占用更大的带宽。
   - 极性意外改变会导致所有的 0被解释成所有的 1 ，而所有的 1 被解释成所有的0的问题同样存在，但
-    没有 DC成分问题。
+    **没有 DC成分问题。**
   - RZ使用三个电平，这样生成和辨别更加困难。这些缺陷使得今天不再使用这个方案
   - ![image-20231121171019943](assets/image-20231121171019943.png)
 
 **双相编码**：**曼彻斯特编码**和**差分曼彻斯特编码**。
 
-- **曼彻斯特编码**：RZ的思想（位中间跳变）和NRZ-L（电平决定了位值）的思想共同组成了曼彻斯特(Manchester) 编码方案。位的持续时间被二等分。在前半部分电平保持一个水平，后半部分变成另一个水平。位中间的跳变提供了同步。
-- **差分曼彻斯特**： 组合了 RZ（位中间跳变）和 NRZ-I（电平是否反相转决定了位值）的思想。在位中间总是有一个跳变，但是位值在位开始时确定。如果下一个位是0 ，就有一个跳变。如果下一个位是 1 ，则没有跳变。
+- **曼彻斯特编码**（1爬升、0下降）：RZ的思想（位中间跳变）和NRZ-L（电平决定了位值）的思想共同组成了曼彻斯特(Manchester) 编码方案。位的持续时间被二等分。在前半部分电平保持一个水平，后半部分变成另一个水平。位中间的跳变提供了同步。
+- **差分曼彻斯特**（1不反相，0反相）： 组合了 RZ（位中间跳变）和 NRZ-I（电平是否反相转决定了位值）的思想。在位中间总是有一个跳变，但是位值在位开始时确定。如果下一个位是0 ，就有一个跳变。如果下一个位是 1 ，则没有跳变。
 - ![image-20231113154218961](assets/image-20231113154218961.png)
 - 在曼彻斯特和差分曼彻斯特编码中，位中间的跳变用于同步。
 - 没有基线偏移
@@ -160,6 +160,7 @@
 **双极性方案**：在双极编码(也称为多电平二进制)中，有三个电平:正负值和零。一个数据元素的电平是0 ，而另一个数据元素的电平在正值、负值间交替。
 
 - AMI和伪三元编码
+- ![image-20231209200534198](assets/image-20231209200534198.png)
 
 **多电平方案(mBnL方案)**：在mBnL方案中，m个数据元素模式编码成 n个信号元素模式 ，2^m^<=L^n^ 。
 
