--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -94,7 +94,7 @@
 
 1900年。:star:**八国联军侵华**（英法美德俄日意奥），以镇压义和团之名行瓜分和掠夺中国之实。:star:7月，俄罗斯派兵占领中国东北三省。:star:9月，义和团运动失败，八国联军强迫清廷签订丧权辱国条约，加剧了清廷的灭亡；运动中清除了外国势力在中国的思想、文化毒瘤，使得中国文化得以延续。
 
-1901年至1911年：:star:清末新政。
+1901年至1911年：**:star:清末新政**。
 
 1901年。:star:**《辛丑条约》**，中国近代史上失权最严重的不平等条约，进一步加强了帝国主义对中国的全面控制和掠夺，表明清政府已完全成为帝国主义统治中国的工具，标志着**中国已完全沦为半殖民地半封建社会**。
 
@@ -104,7 +104,7 @@
 
 1905年。:star:8月20日，**中国同盟会**在日本东京建立（近代中国第一个领导资产阶级革命的全国性政党，广义上的辛亥革命开始）。:star:五大臣出洋考察。:star:科举制度被废除。
 
-1905年至1911年：:star:立宪运动。
+1905年至1911年：:star:**立宪运动**。
 
 1906年。:star:下诏预备立宪。
 
@@ -138,7 +138,7 @@
 
 1917年。:star:1月蔡元培任北大校长，聘陈独秀为文科学长，《新青年》迁至北京。:star:3月，俄国爆发二月革命，推翻了罗曼诺夫王朝，结束了君主专制的统治，二月革命后出现了两个政权并立的局面，俄国临时政府（俄罗斯共和国）和苏维埃政权。:star:4月6日，美国向德国宣战，次日向奥匈宣战。:star:6月张勋复辟（仅12天）。:star:8月14日大总统冯国璋在8月14日发布《大总统布告》，声明自当日上午10时起，对德国、奥匈帝国宣战。:star:9月在广州成立以孙中山为大元帅的护法军政府。:star:11月7日，**俄国十月革命**，结束了俄国临时政府与工兵代表苏维埃并立、一个国家两个政府的奇怪局面，苏维埃政权确立，建立世界上第一个社会主义国家政权——俄罗斯苏维埃联邦社会主义共和国（**苏俄**），此后逐步实行**战时共产主义**（国内贸易国有化；对一切食品、个人消费品、家用品、糖、茶、盐、火柴等等实行国家垄断；余粮收集制；产品配给制；劳动义务制；全部工业国有化；工人超10人的私营企业全部收归国有）。因叛乱和外部干涉，苏俄内战在全国范围爆发了，这个新生的国家几乎从诞生伊始就面临着夭亡的威胁。:star:本年，新文化运动举起“文学革命”的大旗，提倡白话文，反对文言文，提倡新文学，反对旧文学。
 
-1918年。:star:3月3日，苏俄 与同盟国签订了和约，苏俄退出一战。:star:3月6日，英、法、日、美等协约国为扼杀新生的苏维埃政权，乘机进行武装干涉，扶植俄国反革命势力发动武装叛乱，并有干涉军入境，一战后结束后德国及奥斯曼等也有干涉。:star:5月，鲁迅在《新青年》上发表了中国现代文学史上第一篇白话小说《狂人日记》，对旧礼教旧道德进行了无情的鞭挞。:star:5月21日，孙中山看透了西南实力派名为护法、实为争夺地盘的面目，愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月，上旬，德皇威廉二世退位，魏玛共和国成立；11日，**一战结束**。:star:11月李大钊《庶民的胜利》《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
+1918年。:star:3月3日，苏俄 与同盟国签订了和约，苏俄退出一战。:star:3月6日，英、法、日、美等协约国为扼杀新生的苏维埃政权，乘机进行武装干涉，扶植俄国反革命势力发动武装叛乱，并有干涉军入境，一战后结束后德国及奥斯曼等也有干涉。:star:5月，鲁迅在《新青年》上发表了中国现代文学史上第一篇白话小说《狂人日记》，对旧礼教旧道德进行了无情的鞭挞。:star:5月21日，孙中山看透了西南实力派名为护法、实为争夺地盘的面目，愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月，上旬，德皇威廉二世退位，魏玛共和国成立；11日，**一战结束**。:star:11月李大钊**《庶民的胜利》**《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
 
 1919年。:star:1月巴黎和会召开。:star:3月2～6日，在莫斯科召开国际共产主义者代表会议，即第三国际第一次代表大会，共产国际（**第三国际**）成立。:star:5月4日，**五四运动**（旧民主主义革命走向新民主主义革命的转折点，新民主主义革命的开端，彻底反帝反封建的伟大爱国运动，伟大社会革命运动，伟大思想启蒙运动和新文化运动，巴黎和会上中国外交的失败，“外争主权，内惩国贼”、“取消二十一条”、“还我青岛”，最初运动中心主力是学生，运动的中心在北京；五四精神，爱国进步民主科学，核心是爱国主义；第一次全面觉醒）。:star:6月5日，上海工人罢工，推动了商人罢市、学生罢课，随后扩展到了20多个省区，五四运动斗争的主力由学生转为工人，运动中心由北京转为上海，中国工人阶级开始以独立的姿态登上历史舞台。:star:6月，五四运动取得了重大胜利，北洋政府不得不释放被捕学生，罢免亲日派官僚，中国政府代表没有出席巴黎和约《凡尔赛条约》的签字仪式（6月28日）。:star:9月李大钊**《我的马克思主义观》**（系统介绍了马克思主义理论，标志着马克思主义在中国进入比较系统的传播阶段）:star:旧民主主义革命时期至此结束，新民主主义革命时期的开端。
 
@@ -152,7 +152,7 @@
 
 1921年。:star:苏维埃俄国内战结束，**苏维埃俄国实行新经济政策**，取代了战时共产主义（向社会主义过渡的经济政策，以征收粮食税代替余粮收集制，允许外资企业管理国家暂时无力经营的企业，允许私人小工业企业发展，采取一些国家资本主义的形式来发展生产，恢复商品货币关系，进行调节生产的作用，后来，因斯大林上台而被逐步取消）。:star:7月23日，中国共产党第一次全国代表大会（**党一大**，上海，最后一天的会议转移到浙江嘉兴南湖的游船上举行，成立中国共产党，中国革命的面貌从此焕然一新，通过了中共第一个纲领和决议，没有区分民主革命和社会主义革命；采取革命的方法，即群众路线的方法，把发展工人运动作为党的工作重心，同时也从事发动农民的工作）。:star:9月中国第一个农民协会，开展反抗地主压迫斗争
 
-1922年。:star:1月香港海员罢工。:star:6月粤系陈炯明叛乱，指使所部叛变，炮轰孙中山驻地后回任粤军总司令。:star:6月15日，中共中央发表**《中国共产党对于时局的主张》**，指出解决时局的关键，是用革命手段打倒帝国主义和封建军阀，建立民主政治，这是中国共产党第一次向社会各界公开自己的政治主张。:star:7月中国共产党第二次全国代表大会（**党二大**，上海，提出反帝反封建的民主革命纲领，也强调为实现反帝反军阀的革命目标，必须联合全国一切革命党派，联合资产阶级民主派，组成“民主主义的联合战线”，这标志着党明确提出了**统一战线政策**，通过**《关于“民主的联合战线”的决议案**》；区分了最高纲领和最低纲领，分清了民主主义革命与社会主义革命的界限，但不懂得新旧民主主义革命的界限，发动工农运动，制定了第一部**《中国共产党章程》**，通过《中国共产党加入第三国际决议案》，决定中国共产党加入共产国际）。:star:12月，苏俄内战结束，30日，**苏联正式成立**。
+1922年。:star:1月香港海员罢工。:star:6月粤系陈炯明叛乱，指使所部叛变，炮轰孙中山驻地后回任粤军总司令。:star:6月15日，中共中央发表**《中国共产党对于时局的主张》**，指出解决时局的关键，是用革命手段打倒帝国主义和封建军阀，建立民主政治，这是中国共产党第一次向社会各界公开自己的政治主张。:star:7月中国共产党第二次全国代表大会（**党二大**，上海，**提出反帝反封建的民主革命纲领**，也强调为实现反帝反军阀的革命目标，必须联合全国一切革命党派，联合资产阶级民主派，组成“民主主义的联合战线”，这标志着党明确提出了**统一战线政策**，通过**《关于“民主的联合战线”的决议案**》；区分了最高纲领和最低纲领，分清了民主主义革命与社会主义革命的界限，但不懂得新旧民主主义革命的界限，发动工农运动，制定了第一部**《中国共产党章程》**，通过《中国共产党加入第三国际决议案》，决定中国共产党加入共产国际）。:star:12月，苏俄内战结束，30日，**苏联正式成立**。
 
 1923年。:star:1月孙中山与苏俄代表《孙文越飞联合宣言》。:star:2月，京汉铁路工人罢工，成为工人运动第一次高潮的顶点，反动军阀进行血腥镇压，造成**二七惨案**，中国工人运动转入低潮。:star:6月，中国共产党第三次全国代表大会（**党三大**，广州，正确估计了孙中山的革命立场和国民党进行改革的可能性，大会决定共产党员以个人身份加入国民党，以实现国共合作，明确规定共产党员加入国民党时，党必须在政治上、思想上、组织上保持自己的独立性，采取党内合作的形式同国民党建立联合战线，以完成反帝反封建的革命任务，没有提出无产阶级应当努力争取对民主革命的领导权的问题）。
 
@@ -160,7 +160,7 @@
 
 1924年。:star:1月国民党一大，新三民主义，联俄联共，扶助和依靠农工，**第一次国共合作**的正式形成，（第一次国共合作：1924-1927，党内合作，政治基础是新三民主义），很快开创了反对帝国主义和封建军阀的革命新局面。:star:1月陈炯明被滇、桂、粤联军组成的西路讨贼军击败率部退守东江（1925年国民革命军两次东征彻底消灭其势力）。:star:工人运动开始复兴。:star:创办黄埔军校。
 
-1925年。:star:1月中国共产党第四次全国代表大会（**党四大**，上海，明确提出无产阶级在民主革命中的领导权和工农联盟问题，对民主革命的内容作了更加完整的规定，但对如何实行无产阶级的领导权特别是对于如何正确处理在同资产阶级争夺领导权中的种种复杂问题没有作出具体回答，对政权和武装问题的极端重要性缺乏足够的认识）。:star:2月，国民革命军第一次东征（征讨盘踞在广东东部的军阀陈炯明）。:star:3月12日孙中山逝世。:star:5月，五卅惨案（工人罢工的斗争，遭到日本帝国主义和北洋军阀的镇压）、**五卅运动**（反帝爱国运动），广大的工人、学生和部分工商业者，在许多城市和县镇举行游行示威和罢工、罢课、罢市，以次为起点掀起了全国规模的反帝爱国运动高潮，掀起全国范围大革命（1925~1927）的高潮。:star:6月，省港大罢工，持续了16个月之久，是中国工人运动史上持续时间最长的一次政治大罢工。:star:10月，国民革命军第二次东征（征讨盘踞在广东东部的军阀陈炯明，此次陈炯明势力被消灭）。:star:12月，毛泽东**《中国社会各阶级的分析》**，分析了中国社会各阶级，特别分析了中国资产阶级的特殊情况，科学地八其划分为买办资产阶级和民族资产阶级，指出各自的政治态度；揭示了中国革命的对象，阐明认清对象对革命胜利的极端重要性；提出“谁是我们的敌人？谁是我们的朋友？这个问题是革命的首要问题”。
+1925年。:star:1月中国共产党第四次全国代表大会（**党四大**，上海，明确提出无产阶级在民主革命中的领导权和工农联盟问题，对民主革命的内容作了更加完整的规定，但对如何实行无产阶级的领导权特别是对于如何正确处理在同资产阶级争夺领导权中的种种复杂问题没有作出具体回答，对政权和武装问题的极端重要性缺乏足够的认识）。:star:2月，国民革命军第一次东征（征讨盘踞在广东东部的军阀陈炯明）。:star:3月12日孙中山逝世。:star:5月，五卅惨案（工人罢工的斗争，遭到日本帝国主义和北洋军阀的镇压）、**五卅运动**（反帝爱国运动），广大的工人、学生和部分工商业者，在许多城市和县镇举行游行示威和罢工、罢课、罢市，以次为起点掀起了全国规模的反帝爱国运动高潮，掀起全国范围大革命（1925~1927）的高潮。:star:6月，省港大罢工，持续了16个月之久，是中国工人运动史上持续时间最长的一次政治大罢工。:star:10月，国民革命军第二次东征（征讨盘踞在广东东部的军阀陈炯明，此次陈炯明势力被消灭）。:star:12月，毛泽东**《中国社会各阶级的分析》**，分析了中国社会各阶级，特别分析了中国资产阶级的特殊情况，科学地把其划分为买办资产阶级和民族资产阶级，指出各自的政治态度；揭示了中国革命的对象，阐明认清对象对革命胜利的极端重要性；提出“谁是我们的敌人？谁是我们的朋友？这个问题是革命的首要问题”。
 
 1926年。:star:7月**北伐战争**（以推翻北洋军阀统治为目标）。:star:9月1日毛泽东**《国民革命与农民运动》**，论述了农民运动与国民革命的关系，指出农民问题是国民革命的中心问题，宗法封建的地主阶级特权，要靠“农民从乡村中奋起打倒”。
 
@@ -177,8 +177,7 @@
 
 1928-1929年：:star:中国民族工商业短暂繁荣。
 
-1929年。:star:2月蒋桂战争、蒋冯战争。:star:4月，毛泽东主持制定中共第二个土地法**《兴国土地法》**（将“没收一切土地”变为“没收一切公用土地及地主阶级的土地”，这是一个原则性的修正，保护了中农的利益使之不受侵犯；但是它仍然规定农民对分到的土地只有使用权，没有所有权）。:star:10月，由美国开始的经济危机席卷整个资本主义世界。:star:12月，红四军党的第九次代表大会（**古田会议**，确立了思想建党、政治建军的原则，党对军队的领导定型于此）。:star:12月，毛泽东**《关于纠正党内的错误思想》**，针对党和红军中存在的种种非无产阶级思想及其危害，提出了思想建党、政治建军的原则，强调党员不但要在组织上入党，而且要在思想上入党，要经常注意用无产阶级思想改造和克服各种非无产阶
-级思想。定型了党对军队绝对领导的根本原则和制度。
+1929年。:star:2月蒋桂战争、蒋冯战争。:star:4月，毛泽东主持制定中共第二个土地法**《兴国土地法》**（将“没收一切土地”变为“没收一切公用土地及地主阶级的土地”，这是一个原则性的修正，保护了中农的利益使之不受侵犯；但是它仍然规定农民对分到的土地只有使用权，没有所有权）。:star:10月，由美国开始的经济危机席卷整个资本主义世界。:star:12月，红四军党的第九次代表大会（**古田会议**，确立了思想建党、政治建军的原则，党对军队的领导定型于此）。:star:12月，毛泽东**《关于纠正党内的错误思想》**，针对党和红军中存在的种种非无产阶级思想及其危害，提出了思想建党、政治建军的原则，强调党员不但要在组织上入党，而且要在思想上入党，要经常注意用无产阶级思想改造和克服各种非无产阶级思想。定型了党对军队绝对领导的根本原则和制度。
 
 1930年。:star:1月毛泽东**《星星之火，可以燎原》**，进一步发展了”工农武装割据“的思想，基本形成了农村包围城市、武装夺取政权的理论，红军、游击队和红色区域的建立和发展是半殖民地中国在无产阶级领导之下的农民斗争的最高形式和半殖民地农民斗争发展的必然结果，并且无疑义的是促进全国革命高潮的最重要因素。:star:5月毛泽东**《反对本本主义》**,毛泽东思想的初步形成。理论与实际相结合。独立自主思想的最初的明确表述，坚持独立自主原则是毛泽东针对党存在的”左“倾教条主义("本本主义")倾向错误提出的。第一次提出”没有调查，就没有发言权“。第一次提出”中国革命斗争的胜利要靠中国同志了解中国情况“。基本形成了包含**毛泽东思想的活的灵魂**的实事求是、群众路线、独立自主基本思想，基本形成了明确的马克思主义的思想路线。:star:5月至10月，中原大战。:star:10月，蒋介石开始**”围剿“中共**。
 
@@ -205,7 +204,7 @@
 
 1937年。:star:2月，中共提出停止内战等五项要求，若国民党将这五项要求定为国策，则共产党愿意实行包括武力推翻国民党政府的方针在内的四项保证。上述主张引起巨大反响和赞同。:star:2月国民党五届三中全会（国共两党第二次合作不可阻挡，同意国共两党谈判，并在会议文件上**第一次写上了“抗日”的字样**）。:star:夏，毛泽东《实践论》《矛盾论》（揭露和批判了长期存在于党内的主观主义错误尤其是教条主义错误，科学的阐明了党的马克思主义的思想路线）。:star:7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，中国抗日战争进入全民族抗战的新时期，开辟了世界反法西斯战争的东方主战场，21天后北平沦陷，中日之间以完全处于战争状态，国民政府仅发表了《自卫抗战声明书》，并未正式对日宣战。:star:8月国共两党达成协议（八路军、新四军）。:star:8月中共**洛川会议**（抗日救国十大纲领，人民战争路线，打到日本帝国主义关键在于使已发动的抗战成为全面的全民族抗战）。:star:8月13日—11月12日，淞沪会战，上海沦陷。:star:9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”:star:。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。:star:9月—11月太原会战，9月八路军**平型关大捷**是全民族抗战以来中国军队主动寻歼敌人的一次重大胜利，打破了日军不可战胜的神话；11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位。:star:9月22日国民党《中国共产党为公布国共合作宣言》。:star:9月23日蒋介石发表实际承认共产党合法地位的谈话，第二次国共合作（1937-1945，党外合作，没有正式的固定组织形式和统一的纲领），以**国共两党第二次合作**作为基础的**抗日民族统一战线**形成。:star:11月华北战场忻口会战。:star:11月20日迁移国民政府于重庆。:star:11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。:star:12月南京沦陷（**南京大屠杀**）。:star:本年，苏联第二个五年计划完成，苏联的工业生产总值跃居欧洲第一，世界第二。
 
-1938年。:star:1月至5月台儿庄战役、徐州会战。:star:3月，德意志与奥地利合并。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月，慕尼黑会议，割让捷克斯洛伐克苏台德领土给德国。:star:9月至11月，**中共六届六中全会**（**《论新阶段》**明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六届六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。
+1938年。:star:1月至5月台儿庄战役、徐州会战。:star:3月，德意志与奥地利合并。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月，慕尼黑会议，割让捷克斯洛伐克苏台德领土给德国。:star:9月至11月，**中共六届六中全会**（**《论新阶段》**明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六届六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。:star:《中国革命和中国共产党》，第一次提出新民主主义革命路线。
 
 1939年。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。:star:9月1日，德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，**宪政运动**（批评国民党一党专政）。:star:10月，毛泽东**《<共产党人>发刊词》**，**第一次提出党在革命中的三大法宝**（统一战线、武装斗争、党的建设)。第一次提出“马克思列宁主义的理论和中国革命的实践相结合”。**第一次把党的建设称为“伟大的工程”**。指出统一战线和武装斗争是中国共产党领导的中国资产阶级民主革命的两个基本特点；是中国革命的两个武器，党组织是掌握这两个武器的英勇战士。:star:11月，苏芬战争。:star:12月，毛泽东**《中国革命和中国共产党》**，**第一次提出新民主主义以及新民主主义革命**这两个科学概念。第一次全面系统论述中国半殖民地半封建的社会性质问题，提出革命对象、革命动力；强调认清中国国情“乃是认清一切革命问题的基本的依据”。第一次提出“所谓新民主主义的革命，就是在无产阶级领导之下的人民大众的反帝反封建的革命”；**明确提出，“帝国主义和中华民族的矛盾，封建主义和人民大众的矛盾”，构成近代中国社会的主要矛盾**。
 
@@ -219,7 +218,7 @@
 
 1944年。:star:5月11日，豫湘桂战役（国民党军队大溃退）。:star:5月21日—翌年4月20日，中共扩大的**六届七中全会**在延安召开。全会通过毛泽东为中央委员会主席的提议，原则通过**《关于若干历史问题的决议》**，肯定了确立毛泽东在全党的领导地位的重大意义，使全党尤其是党的高级干部对中国民主革命基本问题的认识达到在马克思列宁主义基础上的一致。至此，**整风运动胜利结束**。整风运动是一次深刻的马克思主义思想教育运动，收到巨大成效。通过整风运动，实现了在以毛泽东同志为核心的党中央领导下全党新的团结和统一，为抗日战争的胜利和新民主主义革命在全国的胜利，奠定了重要的思想政治基础。延安整风运动所积累的经验对党的建设具有重大而深远的意义。:star:6月**诺曼底登陆**。:star:7月联合国国际货币金融会议（布雷顿森林货币体系，二战后以美元为中心的国际货币体系，外汇自由化、资本自由化和贸易自由化为主要内容的多边经济制度，构成资本主义集团的核心内容）。:star:9月，提出联合政府主张。:star:本年 中国共产党领导敌后军民在华北、华中、华南地区发起局部反攻，歼灭日、伪军近20万人，收复大片国土，解放人口1700多万。
 
-1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张；新民主主义的经济纲领，没收封建土地归农民、没收官僚资产阶级的垄断资本归新民主主义国家所有、保护民族工商业，其中保护民族工商业是新民主主义经济纲领中极具特色的一项内容。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议《联合国宪章》，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
+1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张；新民主主义的经济纲领，没收封建土地归农民、没收官僚资产阶级的垄断资本归新民主主义国家所有、保护民族工商业，其中保护民族工商业是新民主主义经济纲领中极具特色的一项内容。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议**《联合国宪章》**，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
 
 ## **1945~1949：:star:解放战争时期**
 
@@ -260,7 +259,7 @@
 
 **1952年底至1956年，我们党适时提出，“在打倒地主阶级和官僚资产阶级以后，中国内部的主要矛盾即是工人阶级与民族资产阶级的矛盾，故不应再将民族资产阶级称为中间阶级”，与之相适应，逐步完成“一化三改”，成为过渡时期的总路线。**
 
-1954年。:star:9月第一届全国人民代表大会，20日**第一部《中华人民共和国宪法》**在第一次会议上通过（宪法1.0）。:star:6月—9月 长江、淮河流域发生百年未遇的大水灾。:star:9月，政务院下达对棉布实行计划收购和计划供应、对棉花实行计划收购的命令（国家对粮食等主要农产品实行统购统销政策，并延续到20世纪80年代中期，之后逐步取消）。:star:10月成立新疆军区生产建设兵团（1975年3月，兵团撤销，成立新疆维吾尔自治区农垦总局。1981年12月3日，中共中央、国务院、中央军委作出《关于恢复新疆生产建设兵团的决定》）。:star:12月21日—25日，全国政协二届一次会议举行，周恩来作政治报告，指出，由于一届全国人大一次会议已经召开，政协代行全国人大职权的政权机关的作用已经失去，但政协本身的统一战线作用仍然存在，通过**《中国人民政治协商会议章程》**。
+1954年。:star:9月**第一届全国人民代表大会**，20日**第一部《中华人民共和国宪法》**在第一次会议上通过（宪法1.0）。:star:6月—9月 长江、淮河流域发生百年未遇的大水灾。:star:9月，政务院下达对棉布实行计划收购和计划供应、对棉花实行计划收购的命令（国家对粮食等主要农产品实行统购统销政策，并延续到20世纪80年代中期，之后逐步取消）。:star:10月成立新疆军区生产建设兵团（1975年3月，兵团撤销，成立新疆维吾尔自治区农垦总局。1981年12月3日，中共中央、国务院、中央军委作出《关于恢复新疆生产建设兵团的决定》）。:star:12月21日—25日，全国政协二届一次会议举行，周恩来作政治报告，指出，由于一届全国人大一次会议已经召开，政协代行全国人大职权的政权机关的作用已经失去，但政协本身的统一战线作用仍然存在，通过**《中国人民政治协商会议章程》**。
 
 1955年。:star:4月18日—24日，周恩来，亚非会议，中国代表团本着“求同存异”的方针，同其他与会国家一起，共同倡导形成“万隆精神”，通过这次会议，中国打开了与亚非国家广泛交往的大门。:star:10月1日，新疆维吾尔自治区成立。:star:5月14日，华沙条约组织（华约）建立。
 
@@ -332,7 +331,7 @@
 
 1980年。:star:5月，邓小平在重要谈话中肯定大包干，农村改革势在必行。:star:9月，《关于进一步加强和完善农业生产责任制的几个问题》，肯定在生产队领导下实行的包产到户，不会脱离社会主义轨道。
 
-1981年。:star:6月中共十一届六中全会通过了**《关于建国以来党的若干历史问题的决议》**，**彻底否定文化大革命**，科学评价毛泽东及其思想，**第一次归纳“毛泽东思想的活的灵魂”**，标志着党在指导思想上拨乱反正的胜利完成，继承党的八大关于社会主义改造基本完成以后我国社会主要矛盾的重大判断，进一步将其明确表述为“**人民日益增长的物质文化需要同落后的社会生产之间的矛盾**”，实现了全党解放思想、实事求是、团结一致向前看。:star:12月3日《关于恢复新疆生产建设兵团的决定》。
+1981年。:star:6月中共**十一届六中全会**通过了**《关于建国以来党的若干历史问题的决议》**，**彻底否定文化大革命**，科学评价毛泽东及其思想，**第一次归纳“毛泽东思想的活的灵魂”**，标志着党在指导思想上拨乱反正的胜利完成，继承党的八大关于社会主义改造基本完成以后我国社会主要矛盾的重大判断，进一步将其明确表述为“**人民日益增长的物质文化需要同落后的社会生产之间的矛盾**”，实现了全党解放思想、实事求是、团结一致向前看。:star:12月3日《关于恢复新疆生产建设兵团的决定》。
 
 1982年。:star:1月1日明确指出包产到户、包干到户都是社会主义集体经济的生产责任制（**家庭联产承包责任制**）。:star:1月11日首次提出“一个国家，两种制度”概念。:star:12月4日，中华人民共和国第四部宪法（**八二宪法**，宪法4.0）在第五届全国人大第五次会议上正式通过并颁布。
 
